# vb.mi-dev

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  License.md  README.md  package-info.json.in
.github/workflows/: macos_FAT_release.yml  main.yml
code/: player.gendsp
docs/: _c74_ref_modules.xml  sin~.maxref.xml
docs/vb.mi_ref/: vb.mi.brds~.maxref.xml  vb.mi.grds~.maxref.xml  vb.mi.mrbls~.maxref.xml  vb.mi.mu~.maxref.xml  vb.mi.plts~.maxref.xml
help/: elements-Test.maxpat  vb.mi.brds~.maxhelp  vb.mi.clds2~.maxhelp  vb.mi.clds~.maxhelp  vb.mi.el.resonator~.maxhelp  vb.mi.elmnts~.maxhelp  vb.mi.elmts~.maxhelp  vb.mi.grds~.maxhelp  vb.mi.mrbls~.maxhelp  vb.mi.mrbls~2.maxhelp  vb.mi.mrbls~3.maxhelp  vb.mi.mu~.maxhelp  vb.mi.omi~.maxhelp  vb.mi.plts~.maxhelp  vb.mi.plts~TEST.maxhelp  vb.mi.pvoc~.maxhelp  vb.mi.reson~.maxhelp  vb.mi.rngs~.maxhelp  vb.mi.rngs~OLD.maxhelp  vb.mi.rppls~.maxhelp  vb.mi.rvb~.maxhelp  vb.mi.sheep~.maxhelp  vb.mi.sprectral~.maxhelp  vb.mi.tds.osc~.maxhelp  vb.mi.tds.p~.maxhelp  vb.mi.tds1~.maxhelp  vb.mi.tds~.maxhelp  vb.mi.twobumps~.maxhelp  vb.mi.twodrunks~.maxhelp  vb.mi.verb~.maxhelp  vb.mi.wrps32-2~.maxhelp  vb.mi.wrps32~.maxhelp  vb.mi.wrps~.maxhelp
patches/: Clock-gen.maxpat  computeFilters.js
source/max-api/: ReadMe.md
source/max-api/include/: c74_jitter.h  c74_max.h  c74_max_atom.h  c74_max_atomarray.h  c74_max_database.h  c74_max_dictionary.h  c74_max_dictobj.h  c74_max_hashtab.h  c74_max_linklist.h  c74_max_object.h  c74_max_obstring.h  c74_max_path.h  c74_max_platform.h  c74_max_preprocessor.h  c74_max_proto.h  c74_max_symbol.h  c74_max_sysmem.h  c74_max_systime.h  c74_max_time.h  c74_msp.h  c74_ui.h  c74_ui_dataview.h  c74_ui_graphics.h  jit.gl.h
source/max-api/lib/win64/: MaxAPI.lib
source/max-api/script/: cmakepp.cmake  git-rev.cmake  max-linker-flags.txt  max-package.cmake  max-posttarget.cmake  max-pretarget.cmake
source/mutableSources32/braids/: analog_oscillator.cc  analog_oscillator.h  digital_oscillator.cc  digital_oscillator.h  macro_oscillator.h  resources.cc  resources.h
source/mutableSources32/clouds/: resources.cc  resources.h
source/mutableSources32/clouds/dsp/: audio_buffer.h  granular_processor.cc  granular_processor.h  looping_sample_player.h
source/mutableSources32/grids/: clock.cc  clock.h  pattern_generator.cc
source/mutableSources32/marbles/: cv_reader_channel.h  io_buffer.h  scale_recorder.h  settings.cc  settings.h
source/mutableSources32/tides/: generator.cc  generator.h
source/mutableSources64/elements/: files.txt  resources.cc  resources.h
source/mutableSources64/plaits/: resources.cc  resources.h
source/mutableSources64/rings/: cv_scaler.cc  cv_scaler.h  files.txt  resources.cc  resources.h  settings.cc  settings.h
source/mutableSources64/warps/: files.txt  listFiles01.sh  resources.cc  resources.h  settings.cc  settings.h
source/parasites/stmlib/: README.md
source/parasites/tides/: generator.cc  generator.h
source/projects/vb.mi.brds_tilde/: CMakeLists.txt  vb.mi.brds32_tilde copy.cpp  vb.mi.brds_tilde.cpp
source/projects/vb.mi.clds-min_tilde/: CMakeLists.txt  vb.mi.clds-min_tilde.cpp
source/projects/vb.mi.clds_tilde/: CMakeLists.txt  vb.mi.clds_tilde.cpp
source/projects/vb.mi.el.resonator_tilde/: CMakeLists.txt  filter.h  resonator.cc  resonator.h  vb.mi.el.resonator_tilde.cpp
source/projects/vb.mi.elmnts32_tilde/: CMakeLists.txt  vb.mi.elmnts32_tilde.cpp
source/projects/vb.mi.elmnts_tilde/: CMakeLists.txt  read_inputs.cpp  read_inputs.hpp  vb.mi.elmnts_tilde.cpp
source/projects/vb.mi.grds_tilde/: CMakeLists.txt  vb.mi.grds_tilde.cpp
source/projects/vb.mi.mrbls_tilde/: CMakeLists.txt  dsp.h  read_inputs.cpp  read_inputs.hpp  vb.mi.mrbls_tilde.cpp
source/projects/vb.mi.mu_tilde/: CMakeLists.txt  vb.mi.mu_tilde.cpp
source/projects/vb.mi.omi_tilde/: CMakeLists.txt  vb.mi.omi_tilde.cpp
source/projects/vb.mi.omi_tilde/mi/omi/: resources.cc  resources.h
source/projects/vb.mi.omi_tilde/mi/omi/dsp/: dsp.h  multistage_envelope.cc  multistage_envelope.h  ominous_voice.cc  ominous_voice.h  part.cc  part.h  patch.h
source/projects/vb.mi.plts32_tilde/: CMakeLists.txt  notes-vb.rtf  vb.mi.plts32_tilde.cpp
source/projects/vb.mi.plts_tilde/: CMakeLists.txt  vb.mi.plts_tilde.cpp
source/projects/vb.mi.pvoc_tilde/: CMakeLists.txt  vb.mi.pvoc_tilde.cpp
source/projects/vb.mi.reson_tilde/: CMakeLists.txt  dsp.h  filter.h  resonator.cc  resonator.h  vb.mi.reson_tilde.cpp
source/projects/vb.mi.rngs_tilde/: CMakeLists.txt  read_inputs.cpp  read_inputs.h  vb.mi.rngs_tilde.cpp
source/projects/vb.mi.rngs_tilde/old-layout/: read_inputs.cpp  read_inputs.h  vb.mi.rngs_tilde.cpp
source/projects/vb.mi.rppls_tilde/: CMakeLists copy.txt  CMakeLists.txt  vb.mi.rppls_tilde.cpp
source/projects/vb.mi.rppls_tilde/vcvrack/: Ripples.cpp
source/projects/vb.mi.rppls_tilde/vcvrack/Ripples/: rack--.hpp  ripples copy.hpp  ripples.hpp
source/projects/vb.mi.rppls_tilde/vcvrack/src/: random.cpp
source/projects/vb.mi.rvb_tilde/: CMakeLists.txt  vb.mi.rvb_tilde.cpp
source/projects/vb.mi.sheep_tilde/: CMakeLists.txt  vb.mi.sheep_tilde.cpp
source/projects/vb.mi.spectral_tilde/: CMakeLists.txt  vb.mi.spectral_tilde.cpp
source/projects/vb.mi.tds.osc_tilde/: CMakeLists.txt  vb.mi.tds.osc_tilde.cpp
source/projects/vb.mi.tds.osc_tilde/tides2/: poly_slope_generator.h  ramp_shaper.h
source/projects/vb.mi.tds.p_tilde/: CMakeLists.txt  vb.mi.tds.p_tilde.cpp
source/projects/vb.mi.tds1_tilde/: CMakeLists.txt  vb.mi.tds1_tilde.cpp
source/projects/vb.mi.tds_tilde/: CMakeLists.txt  vb.mi.tds_tilde.cpp
source/projects/vb.mi.twobumps_tilde/: CMakeLists.txt  vb.mi.twobumps_tilde.cpp
source/projects/vb.mi.twodrunks_tilde/: CMakeLists.txt  vb.mi.twodrunks_tilde.cpp
source/projects/vb.mi.verb_tilde/: CMakeLists.txt  fx_engine.h  reverb.h  vb.mi.verb_tilde.cpp
source/projects/vb.mi.wrps32_tilde/: CMakeLists.txt  read_inputs.cpp  vb.mi.wrps32_tilde.cpp
source/projects/vb.mi.wrps_tilde/: CMakeLists.txt  read_inputs.cpp  read_inputs.hpp  vb.mi.wrps_tilde.cpp
(+212 files in other folders)
